--- a/core/templates/core/index_admin.html
+++ b/core/templates/core/index_admin.html
@@ -13,13 +13,13 @@
 {% block main %}
     
     <div class="pb-2 mt-4 mb-2 border-bottom">
-        <h2>Competition Info</h2>
+        <h2>CrowdMapp</h2>
     </div>
     <div id="data-form-helder" class="col-md-8">
         
         <form id="competition-form" action="">
             <div class="form-group">
-                <label for="competitionName">Competition Name</label>
+                <label for="competitionName">Mapathon Name</label>
                 <input type="text" class="form-control" id="competitionName" placeholder="enter Name">
             </div>
             <div class="form-group">
